# ray_tracer_rust

./: .gitignore  Cargo.toml  README.md
ray-tracer-cli/: Cargo.toml
ray-tracer-cli/src/: main.rs  scene.rs
ray-tracer-cli/src/scenes/: clover_scene.rs  clover_triangles_scene.rs  cone_scene.rs  csg_scene.rs  dragon_scene.rs  group_scene.rs  menger_scene.rs  mod.rs  refraction_sphere_scene.rs  smooth_teapot_scene.rs  stripe_pattern_scene.rs  teapot_scene.rs
ray-tracer-cli/src/tests/: mod.rs  projectile_tests.rs
ray-tracer-lib/: Cargo.toml
ray-tracer-lib/src/: camera.rs  canvas.rs  colors.rs  lib.rs  material.rs  obj_reader.rs  object.rs  world.rs
src/: bounds.rs  camera.rs  canvas.rs  colors.rs  comps.rs  cone.rs  cube.rs  cylinder.rs  group.rs  intersection.rs  intersections.rs  light.rs  main.rs  material.rs  math.rs  matrix.rs  object.rs  pattern.rs  plane.rs  projectile.rs  ray.rs  ray_tracer.rs  scene.rs  shape.rs  sphere.rs  transform.rs  tuple.rs  world.rs
src/core/: comps.rs  intersections.rs  math.rs  matrix.rs  ray.rs  transform.rs
src/lights/: light.rs  point_light.rs
src/patterns/: checker.rs  gradient.rs  mod.rs  pattern.rs  ring.rs  stripe.rs
src/scenes/: basic_refraction_scene.rs  clover_scene.rs  clover_triangles_scene.rs  cone_scene.rs  cube_scene.rs  cylinder_scene.rs  group_scene.rs  mod.rs  patterns_scene.rs  refraction_sphere_scene.rs  stripe_pattern_scene.rs
src/shapes/: cone.rs  cube.rs  cylinder.rs  group.rs  mod.rs  plane.rs  shape.rs  sphere.rs  triangle.rs
src/tests/: bounds_tests.rs  camera_tests.rs  canvas_tests.rs  mod.rs  (+23 more)
(+50 files in other folders)
